eks/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-api
    namespace: server
spec:
    selector:
        component: server
    ports:
        - protocol: TCP
          port: 80
          targetPort: 9000
    type: ClusterIP
