eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: nginx
    namespace: server
spec:
    controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: server
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
spec:
    ingressClassName: nginx
    rules:
        - host: "natica-handshake.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/api"
                    backend:
                        service:
                            name: natica-handshake-server
                            port:
                                number: 80
                  - pathType: Prefix
                    path: "/"
                    backend:
                      service:
                        name: natica-handshake-client
                        port:
                          number: 3000

    tls:
        - hosts:
              - natica-handshake.com
          secretName: natica-handshake-cert
